<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flagRv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintTop_toTopOf="@id/flagRv"
            app:layout_constraintBottom_toBottomOf="@id/flagRv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            app:layout_constraintTop_toBottomOf="@id/flagRv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toStartOf="@id/southAmericaBtn"
            android:id="@+id/allFlagsBtn"
            android:text="@string/all_flags_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/southAmericaBtn"
            android:text="@string/south_america_btn"
            android:tag="@string/south_american_code"
            app:layout_constraintTop_toTopOf="@id/allFlagsBtn"
            app:layout_constraintStart_toEndOf="@id/allFlagsBtn"
            app:layout_constraintEnd_toStartOf="@id/europeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/europeBtn"
            android:text="@string/europe_btn"
            android:tag="@string/europe_code"
            app:layout_constraintTop_toTopOf="@id/allFlagsBtn"
            app:layout_constraintStart_toEndOf="@id/southAmericaBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <Button
            android:id="@+id/clearBtn"
            android:text="@string/remove_all_btn"
            app:layout_constraintTop_toBottomOf="@id/allFlagsBtn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>